Now pebble uses messaging in foreground to pass data to mobile phone

--- a/handshaker_android/phoneapp/android/src/main/res/values/colors.xml
+++ b/handshaker_android/phoneapp/android/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     
-    <color name="actionbar_orange">#FF4700</color>
+    <color name="actionbar_orange">#ff9f0005</color>
     
 </resources>
