--- a/handshaker_android/phoneapp/android/src/main/res/layout/activity_main.xml
+++ b/handshaker_android/phoneapp/android/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:background="@color/actionbar_orange"
     android:clipToPadding="false"
     android:fitsSystemWindows="true"
-    tools:context="com.getpebble.pebblekitexample.MainActivity" >
+    tools:context="com.weezlabs.handshakerphone.MainActivity" >
 
     <RelativeLayout
         android:layout_width="fill_parent"
