--- a/handshaker_android/phoneapp/android/src/main/res/layout/activity_main.xml
+++ b/handshaker_android/phoneapp/android/src/main/res/layout/activity_main.xml
@@ -1,80 +1,82 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:custom="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/actionbar_orange"
-    android:clipToPadding="false"
-    android:fitsSystemWindows="true"
-    tools:context="com.weezlabs.handshakerphone.MainActivity" >
+    tools:context="com.weezlabs.handshakerphone.MainActivity">
 
     <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:background="#FFFFFF" >
 
-        <TextView
-            android:id="@+id/install_watchapp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
-            android:text="Install Watchapp"
-            android:textColor="#AAAAAA"
-            android:textSize="25sp" />
-
-        <Button
-            android:id="@+id/button_install"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/install_watchapp"
-            android:layout_marginTop="10dp"
-            android:text="INSTALL"
-            android:onClick="onInstallAppClicked"
-            />
-        <Button
-            android:id="@+id/button_launch"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/install_watchapp"
-            android:layout_toRightOf="@id/button_install"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="10dp"
-            android:text="LAUNCH"
-            android:onClick="onLaunchAppClicked"
-            />
-
-        <TextView
-            android:id="@+id/press_a_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_below="@id/button_install"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
-            android:text="Check the connenction"
-            android:textColor="#AAAAAA"
-            android:textSize="25sp" />
-
-        <Button
-            android:id="@+id/is_alive_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/press_a_button"
-            android:layout_centerHorizontal="true"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
-            android:text="Is alive"
-            android:onClick="onCheckAliveClicked"/>
-
-        <TextView
+        <LinearLayout
+            android:id="@+id/stat_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Log\n1\n.\n.\n.\n.\n.\n.\n.\n.\n.\n.\n.\n.\n.\n.\n.\n.\n.\n.\n.\n.\n.\n.\n.\n.\n.\n.\n."
-            android:id="@+id/text_view"
-            android:scrollbars="vertical"
-            android:layout_below="@+id/is_alive_button"
-            android:layout_alignParentBottom="true"/>
+            android:layout_alignParentBottom="true">
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:gravity="center_horizontal">
+                <com.github.lzyzsd.circleprogress.ArcProgress
+                    android:id="@+id/today_progress"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    custom:arc_progress="55"
+                    custom:arc_unfinished_color="@android:color/white"
+                    custom:arc_finished_color="@android:color/holo_blue_light"
+                    custom:arc_text_color="@android:color/holo_blue_dark"
+                    custom:arc_text_size="16dp"
+                    custom:arc_bottom_text="today"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:gravity="center_horizontal">
+                <com.github.lzyzsd.circleprogress.ArcProgress
+                    android:id="@+id/week_progress"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    custom:arc_progress="55"
+                    custom:arc_unfinished_color="@android:color/white"
+                    custom:arc_finished_color="@android:color/holo_green_light"
+                    custom:arc_text_color="@android:color/holo_green_dark"
+                    custom:arc_text_size="16dp"
+                    custom:arc_bottom_text="week"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:gravity="center_horizontal">
+                <com.github.lzyzsd.circleprogress.ArcProgress
+                    android:id="@+id/month_progress"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    custom:arc_progress="55"
+                    custom:arc_unfinished_color="@android:color/white"
+                    custom:arc_finished_color="@android:color/holo_orange_light"
+                    custom:arc_text_color="@android:color/holo_orange_dark"
+                    custom:arc_text_size="16dp"
+                    custom:arc_suffix_text=""
+                    custom:arc_bottom_text="month"/>
+            </LinearLayout>
+        </LinearLayout>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/attempts_list"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:layout_above="@id/stat_layout"
+            android:layout_alignParentTop="true"/>
+
     </RelativeLayout>
 
 </LinearLayout>
