--- a/handshaker_android/phoneapp/android/src/main/res/values/colors.xml
+++ b/handshaker_android/phoneapp/android/src/main/res/values/colors.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     
-    <color name="actionbar_orange">#ff9f0005</color>
-    
+    <color name="actionbar_orange">#FD9B32</color>
+
+    <color name="grey_title">#626262</color>
+    <color name="description_color">#878787</color>
+    <color name="orange_button">#FD9B32</color>
+    <color name="black_button">#3C3C3C</color>
+    <color name="divider_grey">#D4D4D4</color>
+    <color name="divider_white">#608DFA</color>
 </resources>
