--- a/handshaker_android/phoneapp/android/src/main/res/values/dimens.xml
+++ b/handshaker_android/phoneapp/android/src/main/res/values/dimens.xml
@@ -4,4 +4,9 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 
+    <dimen name="title_size">24sp</dimen>
+    <dimen name="bigger_title_size">28sp</dimen>
+    <dimen name="subtitle_size">20sp</dimen>
+    <dimen name="description_size">16sp</dimen>
+    <dimen name="button_size">14sp</dimen>
 </resources>
