UI update Prepared for animated item update

--- a/handshaker_android/phoneapp/android/src/main/res/layout/attempt_card.xml
+++ b/handshaker_android/phoneapp/android/src/main/res/layout/attempt_card.xml
@@ -17,7 +17,8 @@
             android:layout_height="wrap_content"
             android:text="Date"
             android:textSize="@dimen/subtitle_size"
-            android:textColor="@color/black_button"
+            android:textColor="@android:color/white"
+            android:textStyle="bold"
             android:gravity="center_vertical"
             android:background="@color/orange_button"
             android:paddingLeft="16dp"
