--- a/handshaker_android/phoneapp/android/src/main/res/layout/activity_main.xml
+++ b/handshaker_android/phoneapp/android/src/main/res/layout/activity_main.xml
@@ -7,14 +7,22 @@
 
     <RelativeLayout
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:background="#FFFFFF" >
+        android:layout_height="fill_parent">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/attempts_list"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentBottom="true" />
 
         <LinearLayout
             android:id="@+id/stat_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true">
+            android:layout_alignParentBottom="true"
+            android:padding="@dimen/activity_vertical_margin"
+            android:background="@color/translucent_grey">
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -69,13 +77,6 @@
                     custom:arc_bottom_text="month"/>
             </LinearLayout>
         </LinearLayout>
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/attempts_list"
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:layout_above="@id/stat_layout"
-            android:layout_alignParentTop="true"/>
 
     </RelativeLayout>
 
