--- a/handshaker_android/phoneapp/android/src/main/res/values/colors.xml
+++ b/handshaker_android/phoneapp/android/src/main/res/values/colors.xml
@@ -9,4 +9,7 @@
     <color name="black_button">#3C3C3C</color>
     <color name="divider_grey">#D4D4D4</color>
     <color name="divider_white">#608DFA</color>
+
+    <color name="translucent_grey">#44D4D4D4</color>
+
 </resources>
