--- a/handshaker_android/phoneapp/android/src/main/res/layout/activity_main.xml
+++ b/handshaker_android/phoneapp/android/src/main/res/layout/activity_main.xml
@@ -12,9 +12,8 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/attempts_list"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentBottom="true" />
+            android:layout_height="match_parent"
+            android:layout_marginBottom="70dp"/>
 
         <LinearLayout
             android:id="@+id/stat_layout"
@@ -22,59 +21,58 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:padding="@dimen/activity_vertical_margin"
-            android:background="@color/translucent_grey">
+            android:background="@drawable/white_gradient">
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:orientation="vertical"
                 android:gravity="center_horizontal">
                 <com.github.lzyzsd.circleprogress.ArcProgress
                     android:id="@+id/today_progress"
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
                     custom:arc_progress="55"
                     custom:arc_unfinished_color="@android:color/white"
                     custom:arc_finished_color="@android:color/holo_blue_light"
                     custom:arc_text_color="@android:color/holo_blue_dark"
-                    custom:arc_text_size="16dp"
-                    custom:arc_bottom_text="today"/>
+                    custom:arc_text_size="24dp"
+                    custom:arc_bottom_text="today"
+                    custom:arc_bottom_text_size="14dp"/>
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:orientation="vertical"
-                android:gravity="center_horizontal">
+                android:gravity="center">
                 <com.github.lzyzsd.circleprogress.ArcProgress
                     android:id="@+id/week_progress"
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
+                    android:layout_width="75dp"
+                    android:layout_height="75dp"
                     custom:arc_progress="55"
                     custom:arc_unfinished_color="@android:color/white"
                     custom:arc_finished_color="@android:color/holo_green_light"
                     custom:arc_text_color="@android:color/holo_green_dark"
-                    custom:arc_text_size="16dp"
-                    custom:arc_bottom_text="week"/>
+                    custom:arc_text_size="20dp"
+                    custom:arc_bottom_text="week"
+                    custom:arc_bottom_text_size="12dp"/>
             </LinearLayout>
             <LinearLayout
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:orientation="vertical"
-                android:gravity="center_horizontal">
+                android:gravity="center">
                 <com.github.lzyzsd.circleprogress.ArcProgress
                     android:id="@+id/month_progress"
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
                     custom:arc_progress="55"
                     custom:arc_unfinished_color="@android:color/white"
                     custom:arc_finished_color="@android:color/holo_orange_light"
                     custom:arc_text_color="@android:color/holo_orange_dark"
-                    custom:arc_text_size="16dp"
-                    custom:arc_suffix_text=""
-                    custom:arc_bottom_text="month"/>
+                    custom:arc_text_size="18dp"
+                    custom:arc_bottom_text="month"
+                    custom:arc_bottom_text_size="10dp"/>
             </LinearLayout>
         </LinearLayout>
 
