--- a/handshaker_android/phoneapp/android/src/main/res/values/colors.xml
+++ b/handshaker_android/phoneapp/android/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     
-    <color name="actionbar_orange">#FD9B32</color>
+    <color name="actionbar_text">#FFFFFF</color>
 
     <color name="grey_title">#626262</color>
     <color name="description_color">#878787</color>
